--- a/frontend/index.html
+++ b/frontend/index.html
@@ -141,8 +141,8 @@
       사용자가 <strong>이미지를 업로드하면 자동으로 Alt tag가 생성</strong>됩니다.
     </p>
     <p>
-      이 서비스는 <strong>Microsoft Research</strong>이 개발한  
-      <strong>Florence-2-large</strong>멀티모달 모델을 사용합니다.<br>
+      이 서비스는 <strong>알리바바 클라우드(Qwen 팀)</strong>이 개발한  
+      <strong>Qwen2.5-VL 멀티모달 AI 모델</strong>을 사용합니다.<br>
       별도의 OCR 단계를 거치지 않고, <strong>이미지 안의 글자와 장면을 동시에 인식</strong>하여  
       100자 내외의 Alt tag를 자동으로 생성합니다.
     </p>
