--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Welcome AI Alt Generator</title>
+
+  <!-- ⬇️ 백엔드 절대 URL을 반드시 설정하세요 -->
+  <meta name="backend-url" content="https://welcome-ai-alt-generator-backend.onrender.com">
+
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9fafb; }
-    header { background: #4f46e5; color: white; padding: 1rem; text-align: center; font-size: 1.5rem; font-weight: bold; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background: #f9fafb;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      background: #4f46e5;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
     .info-box {
       background: #eef2ff;
       color: #1e3a8a;
@@ -16,30 +35,77 @@
       font-size: 0.95rem;
       line-height: 1.5;
     }
-    .container { display: flex; flex-wrap: wrap; gap: 1rem; padding: 1rem; }
-    .left, .right { flex: 1; min-width: 300px; background: white; border-radius: 6px; padding: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-
-    .upload-label { display: inline-block; padding: 0.6rem 1.2rem; background: #4f46e5; color: white; border-radius: 6px; cursor: pointer; font-size: 1rem; }
-    input[type="file"] { display: none; }
-    img { max-width: 100%; border-radius: 6px; margin-top: 0.8rem; }
-
-    textarea { width: 100%; min-height: 120px; padding: 0.5rem; border: 1px solid #ddd; border-radius: 6px; resize: none; overflow: hidden; }
-
-    button { margin-top: 0.5rem; padding: 0.6rem 1.2rem; background: #22c55e; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 0.9rem; }
-    button:disabled { background: #9ca3af; cursor: not-allowed; }
-
-    /* 로딩 스피너 스타일 */
-    .spinner {
-      display: none;
-      margin: 1rem auto;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #4f46e5;
-      border-radius: 50%;
-      width: 36px;
-      height: 36px;
-      animation: spin 1s linear infinite;
+    .container {
+      flex: 1;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      padding: 0.8rem;
     }
-    @keyframes spin { 100% { transform: rotate(360deg); } }
+    .left, .right {
+      flex: 1;
+      min-width: 300px;
+      background: white;
+      border-radius: 6px;
+      padding: 0.8rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .upload-section {
+      text-align: center;
+      margin-bottom: 0.8rem;
+    }
+    .upload-label {
+      display: inline-block;
+      padding: 0.6rem 1.2rem;
+      background: #4f46e5;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    input[type="file"] { display: none; }
+    img {
+      max-width: 100%;
+      border-radius: 6px;
+      margin-top: 0.8rem;
+    }
+    .alt-box { margin-top: 1rem; }
+    textarea {
+      width: 100%;
+      min-height: 110px;
+      padding: 0.5rem;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+      font-size: 0.9rem;
+      resize: none;
+    }
+    button {
+      margin-top: 0.5rem;
+      padding: 0.5rem 1rem;
+      background: #22c55e;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+    button.secondary { background: #6366f1; }
+    button:disabled {
+      background: #9ca3af;
+      cursor: not-allowed;
+    }
+    .error-box {
+      margin-top: 0.75rem;
+      padding: 0.6rem 0.75rem;
+      background: #fff1f2;
+      color: #991b1b;
+      border: 1px solid #fecaca;
+      border-radius: 6px;
+      font-size: 0.85rem;
+      display: none;
+      white-space: pre-wrap;
+    }
+    @media (max-width: 768px) { .container { flex-direction: column; } }
   </style>
 </head>
 <body>
@@ -88,83 +154,132 @@
 
   <div class="container">
     <div class="left">
-      <label for="fileInput" class="upload-label">이미지 선택</label>
-      <input type="file" id="fileInput" accept="image/*">
+      <div class="upload-section">
+        <label for="fileInput" class="upload-label">이미지 선택</label>
+        <input type="file" id="fileInput" accept="image/*">
+      </div>
       <div id="preview"></div>
-      <div class="spinner" id="spinner"></div>
     </div>
 
     <div class="right">
       <h3>Alt tag 생성 결과</h3>
-      <textarea id="altText" readonly placeholder="이미지를 업로드하면 자동 생성됩니다."></textarea>
-      <button id="copyBtn" onclick="copyAlt()" disabled>복사하기</button>
-      <button id="regenBtn" onclick="regenerateAlt()" disabled>재생성</button>
+      <div class="alt-box">
+        <textarea id="altText" readonly placeholder="이미지를 업로드하면 여기서 자동 생성됩니다."></textarea>
+        <button id="copyBtn" class="secondary" onclick="copyAlt()" disabled>복사하기</button>
+        <button id="regenBtn" onclick="regenerateAlt()" disabled>재생성</button>
+        <div id="errorBox" class="error-box"></div>
+      </div>
     </div>
   </div>
 
   <script>
+    // 백엔드 베이스 URL 읽기
+    const BACKEND_URL = document.querySelector('meta[name="backend-url"]')?.content?.replace(/\/$/, "");
     let uploadedFile = null;
+
     const fileInput = document.getElementById("fileInput");
     const preview = document.getElementById("preview");
     const altText = document.getElementById("altText");
-    const spinner = document.getElementById("spinner");
     const copyBtn = document.getElementById("copyBtn");
     const regenBtn = document.getElementById("regenBtn");
+    const errorBox = document.getElementById("errorBox");
+
+    function showError(msg) {
+      errorBox.style.display = "block";
+      errorBox.textContent = msg;
+    }
+    function clearError() {
+      errorBox.style.display = "none";
+      errorBox.textContent = "";
+    }
+
+    async function callGenerateAPI(file) {
+      if (!BACKEND_URL) {
+        throw new Error("백엔드 URL이 설정되어 있지 않습니다. <meta name='backend-url'>를 확인하세요.");
+      }
+      const fd = new FormData();
+      fd.append("image", file);
+
+      const res = await fetch(`${BACKEND_URL}/api/generate-alt`, {
+        method: "POST",
+        body: fd,
+      });
+
+      // 응답 본문을 에러 디버깅에 활용
+      const contentType = res.headers.get("content-type") || "";
+      if (!res.ok) {
+        const errText = contentType.includes("application/json")
+          ? JSON.stringify(await res.json())
+          : await res.text();
+        throw new Error(`API ${res.status}: ${errText}`);
+      }
+      return contentType.includes("application/json") ? res.json() : { altTag: await res.text() };
+    }
 
     fileInput.addEventListener("change", async (e) => {
       const file = e.target.files[0];
       if (!file) return;
       uploadedFile = file;
 
+      // 미리보기
       const reader = new FileReader();
-      reader.onload = () => { preview.innerHTML = `<img src="${reader.result}" alt="preview">`; };
+      reader.onload = () => {
+        preview.innerHTML = `<img src="${reader.result}" alt="preview">`;
+      };
       reader.readAsDataURL(file);
 
-      await requestAltTag();
-    });
-
-    async function requestAltTag() {
-      altText.value = "";
-      spinner.style.display = "block"; // 로딩 시작
+      // 상태 초기화
+      clearError();
+      altText.value = "⏳ 생성 중...";
       regenBtn.disabled = true;
       copyBtn.disabled = true;
 
       try {
-        const res = await fetch("https://welcome-ai-alt-generator-backend.onrender.com/api/generate-alt", {
-          method: "POST",
-          body: (() => { const fd = new FormData(); fd.append("image", uploadedFile); return fd; })()
-        });
-        const data = await res.json();
-        altText.value = data.altTag || "❌ 생성 실패";
-        autoExpand(altText); // 자동 크기 조절
-        copyBtn.disabled = false;
+        const data = await callGenerateAPI(uploadedFile);
+        altText.value = data.altTag || "생성 실패";
         regenBtn.disabled = false;
+        copyBtn.disabled = !data.altTag;
       } catch (err) {
-        altText.value = "❌ 오류 발생";
         console.error(err);
-      } finally {
-        spinner.style.display = "none"; // 로딩 종료
+        altText.value = "❌ 오류 발생";
+        showError(String(err.message || err));
       }
-    }
-
-    function copyAlt() {
-      altText.select();
-      document.execCommand("copy");
-      alert("Alt tag 복사됨 ✅");
-    }
+    });
 
     async function regenerateAlt() {
       if (!uploadedFile) return;
-      await requestAltTag();
+      clearError();
+      altText.value = "⏳ 새로 생성 중...";
+      regenBtn.disabled = true;
+      copyBtn.disabled = true;
+      try {
+        const data = await callGenerateAPI(uploadedFile);
+        altText.value = data.altTag || "생성 실패";
+      } catch (err) {
+        console.error(err);
+        altText.value = "❌ 오류 발생";
+        showError(String(err.message || err));
+      } finally {
+        regenBtn.disabled = false;
+        copyBtn.disabled = !altText.value || altText.value.startsWith("❌");
+      }
     }
 
-    // 텍스트 영역 자동 확장
-    function autoExpand(element) {
-      element.style.height = "auto"; // 초기화
-      element.style.height = element.scrollHeight + "px"; // 내용에 맞게 확장
+    async function copyAlt() {
+      try {
+        if (navigator.clipboard?.writeText) {
+          await navigator.clipboard.writeText(altText.value || "");
+        } else {
+          altText.select();
+          document.execCommand("copy");
+        }
+        alert("Alt tag 복사됨 ✅");
+      } catch {
+        alert("복사 실패. 텍스트를 직접 선택해 복사하세요.");
+      }
     }
-
-    altText.addEventListener("input", () => autoExpand(altText));
+    window.regenerateAlt = regenerateAlt;
+    window.copyAlt = copyAlt;
   </script>
 </body>
 </html>
