--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
     .alt-box { margin-top: 1rem; }
     textarea {
       width: 100%;
-      height: 100px;
+      min-height: 100px;
       padding: 0.5rem;
       border-radius: 6px;
       border: 1px solid #ddd;
