--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,6 +78,7 @@
       border: 1px solid #ddd;
       font-size: 0.9rem;
       resize: none;
+      overflow:hidden;
     }
     button {
       margin-top: 0.5rem;
