--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,7 @@
     <div class="right">
       <h3>Alt tag 생성 결과</h3>
       <div class="alt-box">
-        <textarea id="altText" readonly placeholder="이미지를 업로드하면 여기서 자동 생성됩니다."></textarea>
+        <textarea id="altText" readonly placeholder="이미지를 업로드하면 자동 생성됩니다." style="overflow:hidden; resize:none; min-height:120px;"></textarea>
         <button id="copyBtn" class="secondary" onclick="copyAlt()" disabled>복사하기</button>
         <button id="regenBtn" onclick="regenerateAlt()" disabled>재생성</button>
         <div id="errorBox" class="error-box"></div>
