--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,6 +79,7 @@
       font-size: 0.9rem;
       resize: none;
       overflow:hidden;
+      height: auto; /* 자동 높이 */
     }
     button {
       margin-top: 0.5rem;
