--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Welcome AI Alt Generator</title>
+  <title>웰컴금융그룹 AI Alt Generator</title>
 
   <!-- ⬇️ 백엔드 절대 URL을 반드시 설정하세요 -->
   <meta name="backend-url" content="https://welcome-ai-alt-generator-backend.onrender.com">
@@ -19,7 +19,7 @@
       min-height: 100vh;
     }
     header {
-      background: #4f46e5;
+      background: #c0392b;
       color: white;
       padding: 1rem;
       text-align: center;
