--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,6 +152,13 @@
       사용자는 단순히 이미지를 업로드하기만 하면 되며,  
       Alt tag 작성의 번거로움을 크게 줄여줍니다.
     </p>
+    <p>
+      ⚠️ 이 웹앱은 <strong>공모전 프로토타입</strong>으로 제작되었습니다.  
+      사용된 멀티모달 AI 모델(Qwen2.5-VL-7B-Instruct:hyperbolic)은 무료 API 환경에서 동작하기 때문에,  
+      <strong>인식률이 실제 상용 모델 대비 낮을 수 있으며 결과가 일정하지 않을 수 있습니다.</strong><br>
+      특히 한국어 OCR(문자 인식)의 경우 <strong>특수 문자, 작은 글씨, 복잡한 레이아웃</strong>에서 오류가 발생할 수 있습니다.  
+      이 점 참고해 주시길 바랍니다.
+    </p>
   </div>
 
   <div class="container">
