--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,26 +135,9 @@
       <u>이미지를 이해하는 멀티모달 AI</u> 방식 덕분에,  
       단순한 이미지 설명이 아니라 <strong>실제 장면 + 텍스트까지 반영된 정확하고 풍부한 Alt tag</strong>를 제공합니다.
     </p>
-  </div>
-
-  <div class="info-box">
-    <h3>이 웹앱은 어떻게 동작하나요?</h3>
-    <p>
-      사용자가 <strong>이미지를 업로드하면 자동으로 Alt tag가 생성</strong>됩니다.
-    </p>
-    <p>
-      이 서비스는 <strong>알리바바 클라우드(Qwen 팀)</strong>이 개발한  
-      <strong>Qwen2.5-VL 멀티모달 AI 모델</strong>을 사용합니다.<br>
-      별도의 OCR 단계를 거치지 않고, <strong>이미지 안의 글자와 장면을 동시에 인식</strong>하여  
-      100자 내외의 Alt tag를 자동으로 생성합니다.
-    </p>
-    <p>
-      사용자는 단순히 이미지를 업로드하기만 하면 되며,  
-      Alt tag 작성의 번거로움을 크게 줄여줍니다.
-    </p>
     <p>
       ⚠️ 이 웹앱은 <strong>공모전 프로토타입</strong>으로 제작되었습니다.  
-      사용된 멀티모달 AI 모델(Qwen2.5-VL-7B-Instruct:hyperbolic)은 무료 API 환경에서 동작하기 때문에,  
+      사용된 멀티모달 AI 모델(Qwen2.5-VL-7B-Instruct)은 무료 API 환경에서 동작하기 때문에,  
       <strong>인식률이 실제 상용 모델 대비 낮을 수 있으며 결과가 일정하지 않을 수 있습니다.</strong><br>
       특히 한국어 OCR(문자 인식)의 경우 <strong>특수 문자, 작은 글씨, 복잡한 레이아웃</strong>에서 오류가 발생할 수 있습니다.  
       이 점 참고해 주시길 바랍니다.
