--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,7 +133,7 @@
     <p>
       👉 <strong>이 웹앱은 AI를 활용해 이미지를 업로드하면 자동으로 Alt tag를 생성</strong>합니다.  
       <u>이미지를 이해하는 멀티모달 AI</u> 방식 덕분에,  
-      단순한 이미지 설명이 아니라 <strong>실제 장면 + 텍스트까지 반영된 정확하고 풍부한 Alt tag</strong>를 제공합니다.
+      단순한 이미지 설명이 아니라 <strong>이미지 안의 글자와 장면을 동시에 인식하여 정확하고 풍부한 Alt tag</strong>를 제공합니다.
     </p>
     <p>
       ⚠️ 이 웹앱은 <strong>공모전 프로토타입</strong>으로 제작되었습니다.  
