--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,7 +114,7 @@
   <header>📸 웰컴금융그룹 AI Alt Generator</header>
 
   <div class="info-box">
-    <h3>Alt tag란 무엇인가요?</h3>
+    <!-- <h3>Alt tag란 무엇인가요?</h3>
     <p>
       Alt tag(대체 텍스트)는 <strong>이미지에 붙이는 설명 글</strong>로,  
       눈으로 이미지를 볼 수 없는 사용자나 검색엔진이 이미지의 의미를 이해할 수 있도록 도와줍니다.
@@ -129,19 +129,19 @@
     <p>
       하지만 현실적으로 <strong>사람이 이미지마다 일일이 Alt tag를 직접 작성하는 것은 번거롭고 시간이 많이 걸립니다.</strong>  
       그래서 많은 사이트에서 Alt tag가 비어 있거나 대충 작성되는 경우가 많습니다.
-    </p>
+    </p> -->
     <p>
       👉 <strong>이 웹앱은 AI를 활용해 이미지를 업로드하면 자동으로 Alt tag를 생성</strong>합니다.  
       <u>이미지를 이해하는 멀티모달 AI</u> 방식 덕분에,  
       단순한 이미지 설명이 아니라 <strong>이미지 안의 글자와 장면을 동시에 인식하여 정확하고 풍부한 Alt tag</strong>를 제공합니다.
     </p>
-    <p>
+    <!-- <p>
       ⚠️ 이 웹앱은 <strong>공모전 프로토타입</strong>으로 제작되었습니다.  
       사용된 멀티모달 AI 모델(Qwen2.5-VL-7B-Instruct)은 무료 API 환경에서 동작하기 때문에,  
       <strong>인식률이 실제 상용 모델 대비 낮을 수 있으며 결과가 일정하지 않을 수 있습니다.</strong><br>
       특히 한국어 OCR(문자 인식)의 경우 <strong>특수 문자, 작은 글씨, 복잡한 레이아웃</strong>에서 오류가 발생할 수 있습니다.  
       이 점 참고해 주시길 바랍니다.
-    </p>
+    </p> -->
   </div>
 
   <div class="container">
